syntax = "proto3";
package database;

import "google/protobuf/empty.proto";

option go_package = "github.com/damaredayo/gopherlink/proto";

message Status {
    int64 ok = 1;
    PlayStatus playing = 2;
    Usage usage = 3;
}

message Usage {
    float ram = 1;
    float cpu = 2;
}

enum PlayStatus {
    STOPPED = 0;
    PLAYING = 1;
    PAUSED = 2;
}

enum SeekType {
    TO_DURATION = 0;
    ADD_DURATION = 1;
    REMOVE_DURATION = 2;
}

message NowPlayingRequest {
    string guild_id = 1;
    PlayStatus playing = 2;
    int64 duration = 3;
    int64 elapsed = 4;
}

message SeekRequest {
    string guild_id = 1;
    int64 duration = 2;
    SeekType type = 3;
}

message SongInfo {
    string guild_id = 1;
    PlayStatus playing = 2;
    int64 duration = 3;
    int64 elapsed = 4;
    string author = 5;
    string title = 6;
    string URL = 7;
}

message SongRequest {
    string URL = 1;
    string guild_id = 2;
}
message SongAdded {
    SongRequest song = 1;
    SongInfo info = 2;
}

message SongPauseRequest {
    string guild_id = 1;
}

message SongRemoved {
    SongInfo song = 1;
    bool ok = 2;
}

message DiscordVoiceServer {
    string token = 1;
    string guild_id = 2;
    string user_id = 3;
    string endpoint = 4;
    string session_id = 5;
}

message Player {
    string guild_id = 1;
    PlayStatus playing = 2;
}

message PlayerResponse {
    bool ok = 1;
    Player player = 2;
}

message QueueRequest {
    string guild_id = 1;
}

message Queue {
    string guild_id = 1;
    repeated SongInfo songs = 2;
}

message VolumeRequest {
    string guild_id = 1;
    float volume = 2;
}

message VolumeResponse {
    bool ok = 1;
    float volume = 2;
}

message LoopRequest {
    string guild_id = 1;
    bool loop = 2;
}

message LoopResponse {
    bool ok = 1;
    bool loop = 2;
}

message SkipRequest {
    string guild_id = 1;
}


service Gopherlink {
    rpc GetStatusStream (google.protobuf.Empty) returns (stream Status) {}

    rpc CreatePlayer (DiscordVoiceServer) returns (PlayerResponse) {}

    rpc AddSong (SongRequest) returns (SongAdded) {}
    rpc PauseSong (SongPauseRequest) returns (SongInfo) {}
    rpc RemoveSong (SongInfo) returns (SongRemoved) {}
    rpc NowPlaying (NowPlayingRequest) returns (SongInfo) {}
    rpc GetQueue (QueueRequest) returns (Queue) {}
    rpc Seek (SeekRequest) returns (SongInfo) {}
    rpc Volume (VolumeRequest) returns (VolumeResponse) {}
    rpc Loop (LoopRequest) returns (LoopResponse) {}
    rpc Skip (SkipRequest) returns (SongRemoved) {}

}